Lots of fixes and debug code